# Viking-Code-Mythic-Engineering-CLI-Vibe-Coding

./: .rooignore  .roomodes  .roorules  AI Viking TTRPG Emotional Engine Modeling Theory.md  ARCHITECTURE.md  ARCHITECTURE_STUDY_March-8-2026.md  ARCHITECT_REFACTOR_BLUEPRINT.md  Ada_Lovelace_Explains_Mythic_Engineering.md  Aider_Plundering_Guide.md  Building the Yggdrasil Cognitive Architecture in Python_ A Step-by-Step Guide.md  CARTOGRAPHER_CODE_CAPABILITIES.md  CARTOGRAPHER_INTEGRATION_ROUTES.md  CARTOGRAPHER_OVERVIEW.md  CARTOGRAPHER_SYSTEM_ATLAS.md  CHANGELOG.md  CHARACTER_RULES.md  CHARACTER_TEMPLATE_SCHEM.yaml  CODE_REQUIREMENTS_MATRIX.md  DATA_FLOW.md  DEPENDENCIES.md  DEVLOG.md  DOMAIN_MAP.md  DUPLICATES.md  Emotional Engine Integration Plan for Norse Saga Engine.md  Emotional_Engine_Integration_Plan_for_Norse_Saga_Engine.md  Emotional_Engine_Optimization_Recommendations.md  Enhancing Stability, Robustness, and Error-Proofing main.py in Norse Saga Engine Startup Process.md  FILE_AI_IS_NOT_TO_CHANGE.md  Fate-Weaver_Protocol_Integrating_Emotion,_Destiny,_and_Simulation.md  Gemini's_advice_about_prompting_LLMs.md  Gemini_CLI_Plundering_Guide.md  Good_AI_Models_March-2026.md  Goose_Plundering_Guide.md  HJARTAFORGUN_-_The Heart-Forging.md  IMPACT_integration.md  INSTRUCTIONS_FOR_AI.md  INVENTORY.md  JULS_INSTRUCTIONS.md  LEGAL-NOTICE.md  Lawful_Code-Raiding_Guide_Reusing_Apache-2.0_Code_from_Kimi_CLI.md  (+59 more)
.roo/: architect-the-dominant-designer.md  runa.md
core/: ai_runtime_settings.py  dream_system.py  emotional.py  message_queue.py  saga_odin_rag.py  yggdrasil.py
docs/: ACTIVE_PRODUCT_BOUNDARY.md  ARCHITECTURE.md  COMMAND_CONTRACTS.md  DATA_FLOW.md  DOCUMENTATION_STANDARDS.md  DOMAIN_MAP.md  DORMANT_ISLANDS.md  INDEX.md  PHILOSOPHY.md  SYSTEM_VISION.md  (+6 more)
mindspark_thoughtform/: .dockerignore  .gitignore  BUILD_PLAN_v1.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MODEL_CARD.md  README.md  TASK_PHASE0_SETUP.md  TASK_PHASE3_COGNITION.md  TASK_PHASE4_SALVAGE.md  TASK_PHASE5_DEPLOYMENT.md  TASK_PHASE6_RELEASE.md  TASK_PHASE7_SETUP_WIZARD.md  TASK_PHASE8_ROBUSTNESS.md  TODO.md  docker-compose.yml  forge_doctor.py  forge_memory.py  locustfile.py  mkdocs.yml  pyproject.toml  requirements.txt  run_thoughtforge.py  setup.py  setup_thoughtforge.py
mindspark_thoughtform/.github/workflows/: ci.yml
mindspark_thoughtform/MindSpark_ThoughtForge/: README.md
mindspark_thoughtform/benchmarks/: __init__.py  benchmark_profiles.py  persona_consistency.py
mindspark_thoughtform/configs/: default.yaml  personality_core.yaml  user_config.yaml
mindspark_thoughtform/docs/: index.md  quickstart.md
mindspark_thoughtform/hardware_profiles/: desktop_cpu.json  desktop_gpu.json  phone_low.json  pi_5.json  pi_zero.json  server_gpu.json
mindspark_thoughtform/scripts/: install_linux.sh  install_mac.sh  install_pi.sh  install_termux.sh  install_windows.ps1
mindspark_thoughtform/src/thoughtforge/: __init__.py
mindspark_thoughtform/src/thoughtforge/cognition/: __init__.py  chat_history.py  core.py  prompt_builder.py  router.py  scaffold.py
mindspark_thoughtform/src/thoughtforge/etl/: __init__.py  db_integrity.py  embeddings.py  schema.py  sources.py  subset.py  wikidata.py
mindspark_thoughtform/src/thoughtforge/inference/: __init__.py  backends.py  hf_backend.py  lmstudio_backend.py  model_browser.py  ollama_backend.py  onnx_export.py  profiles.py  turboquant.py  turboquant_backend.py  unified_backend.py
mindspark_thoughtform/src/thoughtforge/knowledge/: __init__.py  forge.py  lifecycle.py  models.py  scoring.py  store.py
mindspark_thoughtform/src/thoughtforge/refinement/: __init__.py  enforcement.py  salvage.py
mindspark_thoughtform/src/thoughtforge/utils/: __init__.py  config.py  health.py  logging_setup.py  paths.py  perf.py  retry.py  self_heal.py
mindspark_thoughtform/tests/: __init__.py  test_phase1_knowledge.py  test_phase2_inference.py  test_phase3_cognition.py  test_phase4_refinement.py  test_phase5_deployment.py  test_phase6_adversarial.py  test_phase6_integration.py  test_phase6_release.py  test_phase7_backends.py  test_phase7_chat.py  test_phase8_errors.py  test_phase8_health.py  test_phase8_perf.py
(+91 files in other folders)
